<resources>
    <string name="app_name" translatable="false">CalcTest</string>
    <string name="jump_text_size" translatable="false">60px</string>
    <string name="delete" translatable="false">✖</string>
    <string name="percentage" translatable="false">%</string>
    <string name="div" translatable="false">÷</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="mult" translatable="false">×</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="sub" translatable="false">-</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="add" translatable="false">+</string>
    <string name="jump" translatable="false">💻</string>
    <string name="zero" translatable="false">0</string>
    <string name="point" translatable="false">·</string>
    <string name="equals" translatable="false">=</string>
    <string name="ac" translatable="false">ac</string>
</resources>
