<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f0f0f0"
    tools:context=".MainActivity">
    <!--考虑到部分as不兼容约束布局，故采用线性布局，表格布局完成功能-->
    <!--本界面模仿了了小米手机默认的计算器-->

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </TextView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <TableRow android:layout_width="match_parent"
            android:layout_weight="1">
            <Button android:text="@string/ac"
                android:id="@+id/btn_ac"
                android:layout_weight="1"
                android:textColor="@color/colorOrange"
                android:background="@drawable/border"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/delete"
                android:layout_weight="1"
                android:id="@+id/btn_delete"
                android:background="@drawable/border"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/percentage"
                android:layout_weight="1"
                android:id="@+id/btn_percentage"
                android:background="@drawable/border"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/div"
                android:layout_weight="1"
                android:id="@+id/btn_div"
                android:background="@drawable/border"
                android:textSize="80px"
                android:layout_height="match_parent"/>
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_weight="1">
            <Button android:text="@string/seven"
                android:layout_weight="1"
                android:id="@+id/btn_seven"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/eight"
                android:layout_weight="1"
                android:id="@+id/btn_eight"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/nine"
                android:layout_weight="1"
                android:id="@+id/btn_nine"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/mult"
                android:layout_weight="1"
                android:id="@+id/btn_mult"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_weight="1">
            <Button android:text="@string/four"
                android:layout_weight="1"
                android:id="@+id/btn_four"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/five"
                android:layout_weight="1"
                android:id="@+id/btn_five"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/six"
                android:layout_weight="1"
                android:id="@+id/btn_six"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/sub"
                android:layout_weight="1"
                android:id="@+id/btn_sub"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_weight="1">
            <Button android:text="@string/one"
                android:layout_weight="1"
                android:id="@+id/btn_one"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/two"
                android:layout_weight="1"
                android:id="@+id/btn_two"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/three"
                android:layout_weight="1"
                android:id="@+id/btn_three"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/add"
                android:layout_weight="1"
                android:id="@+id/btn_add"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
        </TableRow>

        <TableRow android:layout_width="match_parent"
            android:layout_weight="1">

            <Button
                android:text="@string/jump"
                android:textColor="@color/colorOrange"
                android:layout_weight="1"
                android:id="@+id/btn_jump"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent" />
            <Button android:text="@string/zero"
                android:layout_weight="1"
                android:id="@+id/btn_zero"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/point"
                android:layout_weight="1"
                android:id="@+id/btn_point"
                android:background="@drawable/border"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
            <Button android:text="@string/equals"
                android:layout_weight="1"
                android:id="@+id/btn_equals"
                android:background="@color/colorOrange"
                style="?android:attr/buttonStyle"
                android:textSize="80px"
                android:layout_height="match_parent"/>
        </TableRow>
    </TableLayout>
</LinearLayout>